--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -25,38 +25,35 @@
             {% endif %}
         {% endwith %}
 
-        <form action="{{ url_for('main.register') }}" method="post">
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+        <form id="registerForm" method="POST" action="{{ url_for('auth.register') }}">
+            {{ form.hidden_tag() }}
 
             <div class="form-group">
                 <label for="username">Username</label>
-                <input name="username" type="text" id="username" class="form-control" required>
+                {{ form.username(class="form-control", id="username") }}
+                {% if form.username.errors %}
+                    <div class="error">{{ form.username.errors[0] }}</div>
+                {% endif %}
             </div>
-
+            
             <div class="form-group">
                 <label for="password">Password</label>
-                <input name="password" type="password" id="password" class="form-control" required>
+                {{ form.password(class="form-control", id="password") }}
+                {% if form.password.errors %}
+                    <div class="error">{{ form.password.errors[0] }}</div>
+                {% endif %}
             </div>
 
+            <!-- Add reCAPTCHA -->
             <div class="form-group">
-                <label for="confirm_password">Confirm Password</label>
-                <input name="confirm_password" type="password" id="confirm_password" class="form-control" required>
+                {{ form.recaptcha.label }}
+                {{ form.recaptcha }}
+                {% if form.recaptcha.errors %}
+                    <div class="error">{{ form.recaptcha.errors[0] }}</div>
+                {% endif %}
             </div>
 
-            <div class="form-group">
-                <button type="button" id="registerFaceBtn">Register Face (Optional)</button>
-                <p class="small">Adding your face will enhance security with biometric verification.</p>
-            </div>
-
-            <input type="hidden" id="faceData" name="faceData">
-            <img id="facePreview" alt="Face Preview">
-            <p id="faceDataStatus"></p>
-
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Register</button>
-            </div>
-
-            <p>Already have an account? <a href="{{ url_for('main.login') }}">Login</a></p>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
 
         <!-- Face registration section -->
